Thu Dec 10 02:01:41 2015  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): do not add debug information
	  without --debug or --debug=frozen-string-literal option
	  because String#dup slows down with debug information.
	  [Feature #11725]

	* NEWS: apply about it.

	* test/ruby/test_rubyoptions.rb: catch up this fix with refactoring.

Thu Dec 10 00:06:56 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c: rename methods
	  RubyVM::InstructionSequence#to_binary_format -> #to_binary
	  RubyVM::InstructionSequence.from_binary_format -> .load_from_binary
	  RubyVM::InstructionSequence.from_binary_format_extra_data ->
	                             .load_from_binary_extra_data

	* iseq.c: fix document of iseq.to_binary.
	  [Fix GH-1134]

	* sample/iseq_loader.rb: catch up this change.

	* test/lib/iseq_loader_checker.rb: ditto.

Wed Dec  9 17:02:03 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* regparse.h (SET_NTYPE): get rid of breaking strict aliasing.
	  patch by Zarko Todorovski in [ruby-core:71953].  [Bug #11790]

Wed Dec  9 16:10:37 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c (rb_vm_cref_in_context): Module#define_method in non-class
	  expression should be public.
	  [Bug #11754]

	* test/ruby/test_method.rb: add a test.

Wed Dec  9 14:45:27 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_stacked_objects): fix typo.
	  reported by XIE Zhibang. [Bug #11763]

Wed Dec  9 14:37:51 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* doc/syntax/refinements.rdoc: remove outdated description.

Wed Dec  9 09:58:09 2015  Koichi Sasada  <ko1@atdot.net>

	* ext/**/*.c (*_memsize): same as r52986 for extensions.

Wed Dec  9 09:46:19 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* .gitignore: ignored ISeq binary format.

Wed Dec  9 09:34:41 2015  Koichi Sasada  <ko1@atdot.net>

	* *.c (*_memsize): do not check ptr.
	  NULL checking is finished Before call of memsize functions.
	  See r52979.

Wed Dec  9 09:25:29 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
