@@ -1,3 +1,8 @@
+Thu Dec 10 04:49:16 2015  Eric Wong  <e@80x24.org>
+
+	* proc.c (bm_free): remove, use default free
+	  (method_data_type): use RUBY_TYPED_DEFAULT_FREE
+
 Thu Dec 10 02:01:41 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* compile.c (iseq_compile_each): do not add debug information
